# 8088sbc

./: CMakeLists.txt  README.md  bios.asm  cmake.sh  my8088.cpp  spi8088.cpp  spi8088.h
